--- a/file2.html
+++ b/file2.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BPM Corporation</title>
-  <link rel="stylesheet" type="text/css" href="/Users/jafar.s/Documents/GitHub/BPM website/css/style.css">
+  <link rel="stylesheet" type="text/css" href="https://github.com/jafarsaleh/website_test/blob/master/file.css">
 </head>
 <body>
   <header class="header">
